added mobile view and some media queries

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <div class="logo">
         <img src="./images/logo.svg" alt="logo icon">
       </div>
+      <div class="toggle-icon">
+        <img class="hamburger-icon" src="./images/icon-hamburger.svg" alt="hamburger icon">
+        <img class="close-icon" src="./images/icon-close.svg" alt="close icon">
+      </div>
       <ul>
         <li><a href="#">Product </a></li>
         <li><a href="#">Features</a></li>
@@ -54,5 +58,6 @@
       Coded by <a href="#">Your Name Here</a>.
     </p>
   </footer>
+  <script src="./app.js"></script>
 </body>
 </html>
