Changed the h3 to h2, and h5 to h3 to resolve accessibility issues. Fixed positioning and spacing.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,6 @@
   
   <title>Frontend Mentor | Project tracking intro component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
   <header>
@@ -34,19 +29,19 @@
   </header>
   <main>
   <div class="hero-text">
-    <h5>
+    <h3>
       <span>New</span>Monograph Dashboard
-    </h5>
+    </h3>
     <h1>
       Powerful insights into your team
     </h1>
-    <h3>
+    <p>
       Project planning and time tracking for agile teams
-    </h3>
-    <div class="schedule">
+    </p>
+    <h3>
       <button>Schedule a demo</button>
-      <h5>to see a live preview</h5>
-    </div>
+      to see a live preview
+    </h3>
   </div>
   <div class="hero">
     <img src="./images/illustration-devices.svg" alt="">
